# Finding-Flaws-In-Specifications

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  Taskfile.yml  config.cmake.example  docker-compose.yml  memo.dio
src/: dot2png.sh  elebater.json  elebater2.txt  input.json  input.txt  main.cpp
src/modules/: automaton.cpp  automaton.hpp  core.cpp  core.hpp  counterexample.cpp  counterexample.hpp  graph.cpp  graph.hpp  input.cpp  input.hpp  product.cpp  product.hpp
